force-app/main/default/objects/Insurance_Details__c/Insurance_Details__c.object-meta.xml
<CustomObject>
    <label>Insurance Detail</label>
    <nameField>
        <label>Insurance  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>