force-app/main/default/objects/Insurance_Details__c/fields/Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Number__c</fullName>
    <label>Insurance Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspk 1</fullName>
            </value>
            <value>
                <fullName>Inspk 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>