force-app/main/default/objects/Insurance_Details__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life Insurances</fullName>
            </value>
            <value>
                <fullName>Motor Insurances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>