force-app/main/default/objects/Insurance_Details__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <label>Insurer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurance Details</relationshipLabel>
    <relationshipName>Insurance_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>