force-app/main/default/objects/Insurance_Details__c/fields/Maturity_Year__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Year__c</fullName>
    <formula>YEAR( TODAY() + VALUE(TEXT( Insurance_Period__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>