force-app/main/default/objects/Insurance_Details__c/fields/Surrended_Date__c.field-meta.xml
<CustomField>
    <fullName>Surrended_Date__c</fullName>
    <label>Surrended Date</label>
    <type>Date</type>
</CustomField>