force-app/main/default/objects/Insurance_Details__c/fields/YearlyPremium__c.field-meta.xml
<CustomField>
    <fullName>YearlyPremium__c</fullName>
    <formula>IF(ISPICKVAL( Sub_Type__c ,&quot;Term Plan&quot;),100,IF(ISPICKVAL( Sub_Type__c ,&quot;Unit Linked Insurance Plan&quot;) , 130, IF(ISPICKVAL( Sub_Type__c ,&quot;Third Party Insurance&quot;),75,50)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YearlyPremium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>